@@ -1,4 +1,6 @@
+* Add support for datetime_field to Many2One, Reference
 * Move info-bar to the top
+* Add noeval to PYSONDecoder
 * Add support for pyson_order on action window
 * Make datetimepicker locale aware
 * Restore tab default order when no manual change
